# pymes

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: jupyterlite.yml  tox.yml
examples/: ActivityFronts.ipynb  BasicSpatialLotkaVolterra.ipynb  EvolutionaryDynamics.ipynb  MayLeonardSpirals.ipynb
src/pymes/: __init__.py  pymes.py
src/pypop/: __init__.py  pypop.py
tests/: test_pymes.py  test_pypop.py
