[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PyPop"
authors = [
    {name = "Ulrich Dobramysl", email = "ulrich.dobramysl@gmail.com"},
]
description = "An educational python module to explore stochastic population dynamics."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["population dynamics", "simulations"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy >= 1.20.0",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.paths]
source = [
    "src/",
    ".tox/mypy/lib/python*/site-packages/",
    ".tox/py*/lib/python*/site-packages/",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = clean, py38, py39, py310, py311, py312, mypy, report

[tool:pytest]
testpaths = tests

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312, mypy

[testenv]
description = install pytest in a virtual environment and invoke it on the tests folder
setenv =
    COVERAGE_FILE = .coverage.{envname}
deps =
    scipy
    pytest>=7
    pytest-sugar
    coverage
    pytest-cov
allowlist_externals = /bin/bash
commands =
    coverage run --source {envsitepackagesdir}/pypop -a -m pytest -rP --cov-report=term-missing {posargs:-vv}
    coverage report --show-missing --ignore-errors
    coverage xml
depends =
    {py38,py39,py310,py311,py312,mypy}: clean
    report: py38,py39,py310,py311,py312,mypy

[testenv:report]
description = provide coverage reports
skip_install = true
deps = coverage
allowlist_externals = /bin/bash
commands =
    /bin/bash -c 'coverage combine --keep .coverage.*'
    coverage html
    coverage report --fail-under=100

[testenv:clean]
deps = coverage
skip_install = true
commands = /bin/bash -c 'rm .coverage.*'
"""